--- a/sections/state_of_the_art.tex
+++ b/sections/state_of_the_art.tex
@@ -106,7 +106,7 @@ The issue of bias originating from historical data is a critical and intricate c
 
 Consider a scenario where historical data contains systemic biases against specific demographics, such as gender, race, or other socio-demographic attributes. The machine learning model, in its quest to optimize performance, dutifully replicates and perpetuates these biases in its predictions and decision-making processes. The consequence of this perpetuation is the perpetuation of historical injustices, potentially leading to the endorsement of discriminatory practices and the exacerbation of preexisting societal inequalities, significantly disadvantaging certain groups. 
 
-Effectively addressing bias originating from historical data necessitates a multidimensional approach, coupled with proactive measures, as also showed in \cref{fig:h_b_addr}
+Effectively addressing biases originating from historical data necessitates a multidimensional approach, coupled with proactive measures, as also showed in \cref{fig:h_b_addr}
 
 \begin{enumerate}
 
@@ -188,7 +188,7 @@ The algorithmic bias mitigation requires several steps, as also showed in \cref{
 
     \item The integration of fairness-aware algorithms within the machine learning process is crucial. These algorithms are deliberately designed to recognize and rectify biases, offering a safeguard against discriminatory predictions and decisions.
 
-    \item Transparency and fairness represent integral aspects of the decision-making process. The incorporation of these elements ensures that algorithms operate equitably, are devoid of bias, and actively promote fairness and equal treatment for all individuals, irrespective of their backgrounds. 
+    \item Transparency and fairness represent integral aspects of the decision-making process. The incorporation of these elements ensures that algorithms operate equitably, are devoid of biases, and actively promote fairness and equal treatment for all individuals, irrespective of their backgrounds. 
 
 \end{enumerate}
 
@@ -251,7 +251,7 @@ Addressing fairness within AI systems necessitates the employment of an assortme
 
 Emphasizing the ethical dimension, the pursuit of fairness in AI systems transcends the confines of technical solutions. It necessitates the active involvement of stakeholders, the incorporation of diverse perspectives, and a steadfast commitment to adhering to guidelines and regulations that prioritize fairness and impartiality. 
 
-In essence, the journey to achieve fairness in AI systems is an ongoing and multifaceted odyssey, demanding relentless research, interdisciplinary collaboration, and unwavering ethical vigilance. The ultimate objective is the creation of AI technologies that steadfastly uphold the principles of fairness, contributing to a more inclusive, just, and equitable society. The continued pursuit of fairness in AI is not just a technical endeavor but a moral imperative, shaping the future of technology and its impact on society.
+In essence, the journey to achieve fairness in AI systems is an ongoing and multifaceted odyssey, demanding relentless research, interdisciplinary collaboration, and unwavering ethical vigilance. The ultimate objective is the creation of AI technologies that steadfastly uphold the principles of fairness, contributing to a more inclusive, just, and equitable society. The continued pursuit of fairness in AI is both a technical and moral challenge, to better shape the future of technology and its impact on society.
 
 \subsection{Fairness Techniques in AI}
 
@@ -265,7 +265,7 @@ Additionally, pre-processing includes the meticulous removal of noise from the d
 
 Furthermore, the creation of balanced synthetic datasets is a valuable technique within the pre-processing repertoire. This involves the generation of new data points, often through the extrapolation of existing data, with the goal of augmenting the representation of underrepresented classes or groups. 
 
-In summation, pre-processing is the cornerstone of equitable and unbiased AI system development. It encompasses a suite of techniques designed to foster balanced and representative data, enabling AI models to operate with impartiality and fairness, contributing to more equitable and unbiased outcomes. handling the initial data before it is used to train the AI model. This stage is crucial to ensure that the data is balanced and representative of the diversity in the population. Common pre-processing techniques include oversampling, undersampling, noise removal from the data, and creating balanced synthetic datasets.
+In summation, pre-processing is the cornerstone of equitable and unbiased AI system development. It encompasses a suite of techniques designed to foster balanced and representative data, enabling AI models to operate with impartiality and fairness, contributing to more equitable and unbiased outcomes. handling the initial data before it is used to train the AI model. This stage is crucial to ensure that the data is balanced and representative of the diversity in the population.
 
 \subsubsection{In-processing}
 
@@ -467,7 +467,7 @@ These post-processing techniques are crucial in rectifying biases and promoting 
 
 Fair-by-design methods represent a proactive approach to addressing bias and promoting fairness in machine learning and artificial intelligence systems from their inception. These methods aim to embed fairness considerations into the design and development of algorithms and models to prevent bias from emerging in the first place. 
 
-There are several key aspect to consider during the development of a Fair-by-Design method:
+There are several key aspects to consider during the development of a Fair-by-Design method:
 
 \begin{itemize}
 
