--- a/sections/contribution.tex
+++ b/sections/contribution.tex
@@ -26,12 +26,12 @@ Here is reported the set of principles that led our design and development of th
 
 \begin{figure}
     \centering
-    \begin{tikzpicture}[node distance=2cm]
+    \begin{tikzpicture}[node distance=3cm]
         \node (start) [startstop] {FbD foundations};
-        \node (pfi) [startstop, left of=start, xshift=-2cm] {Proactive Fairness Integration};
-        \node (te) [startstop, below of=start, xshift=-2cm] {Transparency and Explainability};
-        \node (uca) [startstop, below of=start, xshift=2cm] {User-Centered Approach};
-        \node (cmd) [startstop, right of=start, xshift=2cm] {Continuous Monitoring and Development};
+        \node (pfi) [startstop, left of=start, xshift=-3cm] {Proactive Fairness \\ Integration};
+        \node (te) [startstop, below of=start, xshift=-3cm] {Transparency and \\ Explainability};
+        \node (uca) [startstop, below of=start, xshift=3cm] {User-Centered \\ Approach};
+        \node (cmd) [startstop, right of=start, xshift=3cm] {Continuous Monitoring \\ and Development};
         \draw [arrow] (start) -- (pfi);
         \draw [arrow] (start) -- (te);
         \draw [arrow] (start) -- (uca);
