--- a/sections/validation_ull.tex
+++ b/sections/validation_ull.tex
@@ -27,7 +27,7 @@ In this section, are meticulously outlined the objectives that intricately guide
 
 \subsection{Prediction Objective}
 
-The overarching objective is to execute a fairness-driven classification task, discerning whether a student's english level is either above or under a certain threshold for each student enrolled in the 4 grade.
+The overarching objective is to execute a fairness-driven classification task, discerning whether a student's english level is either above or under the median english level for students enrolled in the 4th grade.
 
 \subsection{Protected Attributes}
 
